// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > create mode 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black/60 backdrop-blur-sm"
  role="presentation"
>
  <div
    aria-label="Create price alert"
    aria-modal="true"
    class="w-full max-w-md bg-gray-900 border border-gray-800 rounded-2xl p-6 shadow-2xl focus:outline-none max-h-[90vh] overflow-y-auto"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="flex items-center justify-between mb-6"
    >
      <h2
        class="text-xl font-semibold text-white"
      >
        New Price Alert
      </h2>
      <button
        aria-label="Close modal"
        class="text-gray-500 hover:text-gray-300 transition-colors p-1 rounded-lg hover:bg-gray-800"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <form
      novalidate=""
    >
      <div
        class="mb-5"
      >
        <span
          class="block text-sm font-medium text-gray-400 mb-2"
        >
          Start from a preset
        </span>
        <div
          class="grid grid-cols-1 sm:grid-cols-3 gap-2 mb-2"
        >
          <button
            class="text-left p-3 bg-gray-800 border border-gray-700 rounded-xl hover:border-cyan-500/50 hover:bg-gray-800/80 transition-colors"
            type="button"
          >
            <div
              class="flex items-center gap-1.5 text-cyan-400 mb-1"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <span
                class="text-sm font-semibold text-white"
              >
                Whale Move
              </span>
            </div>
            <p
              class="text-xs text-gray-400 mb-1"
            >
              A large price swing in either direction over a short window.
            </p>
            <p
              class="text-[11px] text-gray-500 italic"
            >
              Catch sudden moves from a large holder before the broader market reacts.
            </p>
          </button>
          <button
            class="text-left p-3 bg-gray-800 border border-gray-700 rounded-xl hover:border-cyan-500/50 hover:bg-gray-800/80 transition-colors"
            type="button"
          >
            <div
              class="flex items-center gap-1.5 text-cyan-400 mb-1"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <span
                class="text-sm font-semibold text-white"
              >
                Breakout
              </span>
            </div>
            <p
              class="text-xs text-gray-400 mb-1"
            >
              Momentum confirmed across two windows: a strong 1-hour move still accelerating in the last 15 minutes.
            </p>
            <p
              class="text-[11px] text-gray-500 italic"
            >
              Spot a move that is more than noise — the trend is confirmed, not just starting.
            </p>
          </button>
          <button
            class="text-left p-3 bg-gray-800 border border-gray-700 rounded-xl hover:border-cyan-500/50 hover:bg-gray-800/80 transition-colors"
            type="button"
          >
            <div
              class="flex items-center gap-1.5 text-cyan-400 mb-1"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V6m0 10v2m9-8a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <span
                class="text-sm font-semibold text-white"
              >
                Stablecoin Peg Break
              </span>
            </div>
            <p
              class="text-xs text-gray-400 mb-1"
            >
              Price drifts more than 1% away from its $1.00 peg in either direction.
            </p>
            <p
              class="text-[11px] text-gray-500 italic"
            >
              Get an early warning if a stablecoin you hold or rely on is losing its peg.
            </p>
          </button>
        </div>
        <button
          class="text-xs text-cyan-400 hover:text-cyan-300 transition-colors"
          type="button"
        >
          + Save current settings as a preset
        </button>
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-gray-400 mb-1.5"
          for="alert-asset-pair"
        >
          Asset Pair
        </label>
        <input
          class="w-full bg-gray-800 border border-gray-700 rounded-xl px-4 py-2.5 text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-cyan-500/50 focus:border-cyan-500 disabled:opacity-50 disabled:cursor-not-allowed"
          id="alert-asset-pair"
          placeholder="e.g. BTC/USD"
          type="text"
          value=""
        />
      </div>
      <div
        class="mb-5"
      >
        <span
          class="block text-sm font-medium text-gray-400 mb-2"
        >
          Alert Mode
        </span>
        <div
          class="flex gap-2"
        >
          <button
            class="flex-1 py-2 text-sm font-medium rounded-xl border transition-colors bg-cyan-600 border-cyan-500 text-white"
            type="button"
          >
            Absolute Price
          </button>
          <button
            class="flex-1 py-2 text-sm font-medium rounded-xl border transition-colors bg-gray-800 border-gray-700 text-gray-400 hover:bg-gray-700"
            type="button"
          >
            Price Movement %
          </button>
        </div>
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-gray-400 mb-1.5"
          for="alert-upper"
        >
          Upper Threshold
        </label>
        <div
          class="flex gap-2"
        >
          <input
            class="flex-1 bg-gray-800 border border-gray-700 rounded-xl px-4 py-2.5 text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-cyan-500/50 focus:border-cyan-500 [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
            id="alert-upper"
            min="0"
            placeholder="Max price"
            step="any"
            type="number"
            value=""
          />
        </div>
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-gray-400 mb-1.5"
          for="alert-lower"
        >
          Lower Threshold
        </label>
        <div
          class="flex gap-2"
        >
          <input
            class="flex-1 bg-gray-800 border border-gray-700 rounded-xl px-4 py-2.5 text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-cyan-500/50 focus:border-cyan-500 [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
            id="alert-lower"
            min="0"
            placeholder="Min price"
            step="any"
            type="number"
            value=""
          />
        </div>
      </div>
      <div
        class="mb-5 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="text-sm font-medium text-gray-300"
          >
            Additional Conditions
          </span>
          <button
            class="text-xs px-2.5 py-1 rounded-lg border border-cyan-500/30 text-cyan-400 bg-cyan-500/10 hover:bg-cyan-500/20 transition-colors"
            type="button"
          >
            + Add condition
          </button>
        </div>
        <p
          class="text-xs text-gray-500 mb-3"
        >
          Layer extra conditions on top of the field above, combined with AND/OR.
        </p>
      </div>
      <div
        class="mb-6 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <span
          class="block text-sm font-medium text-gray-300 mb-2"
        >
          Alert Type
        </span>
        <div
          class="flex gap-2 mb-2"
        >
          <button
            class="flex-1 py-2 text-sm rounded-xl border transition-colors bg-gray-800 border-gray-700 text-gray-400 hover:bg-gray-700"
            type="button"
          >
            One-Time
          </button>
          <button
            class="flex-1 py-2 text-sm rounded-xl border transition-colors bg-cyan-600 border-cyan-500 text-white"
            type="button"
          >
            Persistent
          </button>
        </div>
        <p
          class="text-xs text-gray-500"
        >
          Fires every time the condition is met. Tracks fire count.
        </p>
        <div
          class="mt-3 pt-3 border-t border-gray-700"
        >
          <label
            class="block text-xs font-medium text-gray-400 mb-1.5"
            for="alert-cooldown"
          >
            Cooldown between alerts
          </label>
          <select
            class="w-full bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white focus:outline-none focus:ring-2 focus:ring-cyan-500/50 focus:border-cyan-500"
            id="alert-cooldown"
          >
            <option
              value="0"
            >
              Off (fire immediately)
            </option>
            <option
              value="1"
            >
              1 minute
            </option>
            <option
              value="5"
            >
              5 minutes
            </option>
            <option
              value="15"
            >
              15 minutes
            </option>
            <option
              value="60"
            >
              1 hour
            </option>
          </select>
          <p
            class="mt-1 text-xs text-gray-500"
          >
            Minimum time between re-fires, to avoid notification spam when the price oscillates around your threshold.
          </p>
        </div>
      </div>
      <div
        class="mb-5 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <label
          class="flex items-center gap-2 cursor-pointer mb-1"
        >
          <input
            class="w-4 h-4 rounded border-gray-600 bg-gray-800 text-cyan-500"
            type="checkbox"
          />
          <span
            class="text-sm font-medium text-gray-300"
          >
            Enable escalation policy
          </span>
        </label>
        <p
          class="text-xs text-gray-500 mb-3"
        >
          Notify additional channels at increasing delays while the breach stays active.
        </p>
      </div>
      <div
        class="mb-6 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <label
          class="flex items-center gap-2 cursor-pointer"
        >
          <input
            class="w-4 h-4 rounded border-gray-600 bg-gray-800 text-cyan-500 focus:ring-cyan-500/50"
            type="checkbox"
          />
          <span
            class="text-sm font-medium text-gray-300"
          >
            Notify on retest
          </span>
        </label>
        <p
          class="text-xs text-gray-500 mt-1.5"
        >
          Also fire if the price re-enters this breached level after it exits.
        </p>
      </div>
      <div
        class="mb-6 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="block text-sm font-medium text-gray-300"
          >
            Notify via
          </span>
          <button
            class="text-xs text-gray-500 hover:text-gray-300 transition-colors"
            type="button"
          >
            Use global defaults
          </button>
        </div>
        <p
          class="text-xs text-gray-500 mb-3"
        >
          Choose where this alert is delivered. Leave empty to use the channels configured in your notification settings.
        </p>
        <p
          class="text-xs text-amber-400/80"
        >
          No channels configured — set up channels in Notification Settings first.
        </p>
      </div>
      <div
        class="mb-6 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="block text-sm font-medium text-gray-300"
          >
            Test alert
          </span>
          <button
            class="text-xs px-3 py-1.5 rounded-lg bg-blue-600 text-white hover:bg-blue-500 transition-colors disabled:opacity-40 disabled:cursor-not-allowed"
            disabled=""
            type="button"
          >
            Run simulation
          </button>
        </div>
        <p
          class="text-xs text-gray-500 mb-2"
        >
          Replays a synthetic price series through the same evaluation logic used live, marking exactly where this alert would fire.
        </p>
        <p
          class="text-xs text-gray-500 italic"
        >
          Run a simulation to see how this alert behaves without touching your live configuration.
        </p>
      </div>
      <div
        class="flex gap-3"
      >
        <div
          class="flex-1 flex gap-3 justify-end"
        >
          <button
            class="px-4 py-2.5 text-sm font-medium text-gray-400 bg-gray-800 border border-gray-700 rounded-xl hover:bg-gray-700 transition-colors"
            type="button"
          >
            Cancel
          </button>
          <button
            class="px-4 py-2.5 text-sm font-medium text-white bg-cyan-600 rounded-xl hover:bg-cyan-500 transition-colors focus:outline-none focus:ring-2 focus:ring-cyan-500/50 disabled:opacity-50 disabled:cursor-not-allowed"
            type="submit"
          >
            Create Alert
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`snapshots > edit mode 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black/60 backdrop-blur-sm"
  role="presentation"
>
  <div
    aria-label="Edit price alert"
    aria-modal="true"
    class="w-full max-w-md bg-gray-900 border border-gray-800 rounded-2xl p-6 shadow-2xl focus:outline-none max-h-[90vh] overflow-y-auto"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="flex items-center justify-between mb-6"
    >
      <h2
        class="text-xl font-semibold text-white"
      >
        Edit Alert
      </h2>
      <button
        aria-label="Close modal"
        class="text-gray-500 hover:text-gray-300 transition-colors p-1 rounded-lg hover:bg-gray-800"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <form
      novalidate=""
    >
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-gray-400 mb-1.5"
          for="alert-asset-pair"
        >
          Asset Pair
        </label>
        <input
          class="w-full bg-gray-800 border border-gray-700 rounded-xl px-4 py-2.5 text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-cyan-500/50 focus:border-cyan-500 disabled:opacity-50 disabled:cursor-not-allowed"
          disabled=""
          id="alert-asset-pair"
          placeholder="e.g. BTC/USD"
          type="text"
          value="BTC/USD"
        />
      </div>
      <div
        class="mb-5"
      >
        <span
          class="block text-sm font-medium text-gray-400 mb-2"
        >
          Alert Mode
        </span>
        <div
          class="flex gap-2"
        >
          <button
            class="flex-1 py-2 text-sm font-medium rounded-xl border transition-colors bg-cyan-600 border-cyan-500 text-white"
            type="button"
          >
            Absolute Price
          </button>
          <button
            class="flex-1 py-2 text-sm font-medium rounded-xl border transition-colors bg-gray-800 border-gray-700 text-gray-400 hover:bg-gray-700"
            type="button"
          >
            Price Movement %
          </button>
        </div>
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-gray-400 mb-1.5"
          for="alert-upper"
        >
          Upper Threshold
        </label>
        <div
          class="flex gap-2"
        >
          <input
            class="flex-1 bg-gray-800 border border-gray-700 rounded-xl px-4 py-2.5 text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-cyan-500/50 focus:border-cyan-500 [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
            id="alert-upper"
            min="0"
            placeholder="Max price"
            step="any"
            type="number"
            value="60000"
          />
        </div>
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-gray-400 mb-1.5"
          for="alert-lower"
        >
          Lower Threshold
        </label>
        <div
          class="flex gap-2"
        >
          <input
            class="flex-1 bg-gray-800 border border-gray-700 rounded-xl px-4 py-2.5 text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-cyan-500/50 focus:border-cyan-500 [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
            id="alert-lower"
            min="0"
            placeholder="Min price"
            step="any"
            type="number"
            value="40000"
          />
        </div>
      </div>
      <div
        class="mb-5 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="text-sm font-medium text-gray-300"
          >
            Additional Conditions
          </span>
          <button
            class="text-xs px-2.5 py-1 rounded-lg border border-cyan-500/30 text-cyan-400 bg-cyan-500/10 hover:bg-cyan-500/20 transition-colors"
            type="button"
          >
            + Add condition
          </button>
        </div>
        <p
          class="text-xs text-gray-500 mb-3"
        >
          Layer extra conditions on top of the field above, combined with AND/OR.
        </p>
      </div>
      <div
        class="mb-6 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <span
          class="block text-sm font-medium text-gray-300 mb-2"
        >
          Alert Type
        </span>
        <div
          class="flex gap-2 mb-2"
        >
          <button
            class="flex-1 py-2 text-sm rounded-xl border transition-colors bg-gray-800 border-gray-700 text-gray-400 hover:bg-gray-700"
            type="button"
          >
            One-Time
          </button>
          <button
            class="flex-1 py-2 text-sm rounded-xl border transition-colors bg-cyan-600 border-cyan-500 text-white"
            type="button"
          >
            Persistent
          </button>
        </div>
        <p
          class="text-xs text-gray-500"
        >
          Fires every time the condition is met. Tracks fire count.
        </p>
        <div
          class="mt-3 pt-3 border-t border-gray-700"
        >
          <label
            class="block text-xs font-medium text-gray-400 mb-1.5"
            for="alert-cooldown"
          >
            Cooldown between alerts
          </label>
          <select
            class="w-full bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white focus:outline-none focus:ring-2 focus:ring-cyan-500/50 focus:border-cyan-500"
            id="alert-cooldown"
          >
            <option
              value="0"
            >
              Off (fire immediately)
            </option>
            <option
              value="1"
            >
              1 minute
            </option>
            <option
              value="5"
            >
              5 minutes
            </option>
            <option
              value="15"
            >
              15 minutes
            </option>
            <option
              value="60"
            >
              1 hour
            </option>
          </select>
          <p
            class="mt-1 text-xs text-gray-500"
          >
            Minimum time between re-fires, to avoid notification spam when the price oscillates around your threshold.
          </p>
        </div>
      </div>
      <div
        class="mb-5 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <label
          class="flex items-center gap-2 cursor-pointer mb-1"
        >
          <input
            class="w-4 h-4 rounded border-gray-600 bg-gray-800 text-cyan-500"
            type="checkbox"
          />
          <span
            class="text-sm font-medium text-gray-300"
          >
            Enable escalation policy
          </span>
        </label>
        <p
          class="text-xs text-gray-500 mb-3"
        >
          Notify additional channels at increasing delays while the breach stays active.
        </p>
      </div>
      <div
        class="mb-6 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <label
          class="flex items-center gap-2 cursor-pointer"
        >
          <input
            class="w-4 h-4 rounded border-gray-600 bg-gray-800 text-cyan-500 focus:ring-cyan-500/50"
            type="checkbox"
          />
          <span
            class="text-sm font-medium text-gray-300"
          >
            Notify on retest
          </span>
        </label>
        <p
          class="text-xs text-gray-500 mt-1.5"
        >
          Also fire if the price re-enters this breached level after it exits.
        </p>
      </div>
      <div
        class="mb-6 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="block text-sm font-medium text-gray-300"
          >
            Notify via
          </span>
          <button
            class="text-xs text-gray-500 hover:text-gray-300 transition-colors"
            type="button"
          >
            Use global defaults
          </button>
        </div>
        <p
          class="text-xs text-gray-500 mb-3"
        >
          Choose where this alert is delivered. Leave empty to use the channels configured in your notification settings.
        </p>
        <p
          class="text-xs text-amber-400/80"
        >
          No channels configured — set up channels in Notification Settings first.
        </p>
      </div>
      <div
        class="mb-6 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="block text-sm font-medium text-gray-300"
          >
            Test alert
          </span>
          <button
            class="text-xs px-3 py-1.5 rounded-lg bg-blue-600 text-white hover:bg-blue-500 transition-colors disabled:opacity-40 disabled:cursor-not-allowed"
            type="button"
          >
            Run simulation
          </button>
        </div>
        <p
          class="text-xs text-gray-500 mb-2"
        >
          Replays a synthetic price series through the same evaluation logic used live, marking exactly where this alert would fire.
        </p>
        <p
          class="text-xs text-gray-500 italic"
        >
          Run a simulation to see how this alert behaves without touching your live configuration.
        </p>
      </div>
      <div
        class="flex gap-3"
      >
        <button
          class="px-4 py-2.5 text-sm font-medium text-red-400 bg-red-400/10 border border-red-400/20 rounded-xl hover:bg-red-400/20 transition-colors"
          type="button"
        >
          Delete Alert
        </button>
        <div
          class="flex-1 flex gap-3 justify-end"
        >
          <button
            class="px-4 py-2.5 text-sm font-medium text-gray-400 bg-gray-800 border border-gray-700 rounded-xl hover:bg-gray-700 transition-colors"
            type="button"
          >
            Cancel
          </button>
          <button
            class="px-4 py-2.5 text-sm font-medium text-white bg-cyan-600 rounded-xl hover:bg-cyan-500 transition-colors focus:outline-none focus:ring-2 focus:ring-cyan-500/50 disabled:opacity-50 disabled:cursor-not-allowed"
            type="submit"
          >
            Save Changes
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`snapshots > with suggestions 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black/60 backdrop-blur-sm"
  role="presentation"
>
  <div
    aria-label="Create price alert"
    aria-modal="true"
    class="w-full max-w-md bg-gray-900 border border-gray-800 rounded-2xl p-6 shadow-2xl focus:outline-none max-h-[90vh] overflow-y-auto"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="flex items-center justify-between mb-6"
    >
      <h2
        class="text-xl font-semibold text-white"
      >
        New Price Alert
      </h2>
      <button
        aria-label="Close modal"
        class="text-gray-500 hover:text-gray-300 transition-colors p-1 rounded-lg hover:bg-gray-800"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <form
      novalidate=""
    >
      <div
        class="mb-5"
      >
        <span
          class="block text-sm font-medium text-gray-400 mb-2"
        >
          Start from a preset
        </span>
        <div
          class="grid grid-cols-1 sm:grid-cols-3 gap-2 mb-2"
        >
          <button
            class="text-left p-3 bg-gray-800 border border-gray-700 rounded-xl hover:border-cyan-500/50 hover:bg-gray-800/80 transition-colors"
            type="button"
          >
            <div
              class="flex items-center gap-1.5 text-cyan-400 mb-1"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <span
                class="text-sm font-semibold text-white"
              >
                Whale Move
              </span>
            </div>
            <p
              class="text-xs text-gray-400 mb-1"
            >
              A large price swing in either direction over a short window.
            </p>
            <p
              class="text-[11px] text-gray-500 italic"
            >
              Catch sudden moves from a large holder before the broader market reacts.
            </p>
          </button>
          <button
            class="text-left p-3 bg-gray-800 border border-gray-700 rounded-xl hover:border-cyan-500/50 hover:bg-gray-800/80 transition-colors"
            type="button"
          >
            <div
              class="flex items-center gap-1.5 text-cyan-400 mb-1"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <span
                class="text-sm font-semibold text-white"
              >
                Breakout
              </span>
            </div>
            <p
              class="text-xs text-gray-400 mb-1"
            >
              Momentum confirmed across two windows: a strong 1-hour move still accelerating in the last 15 minutes.
            </p>
            <p
              class="text-[11px] text-gray-500 italic"
            >
              Spot a move that is more than noise — the trend is confirmed, not just starting.
            </p>
          </button>
          <button
            class="text-left p-3 bg-gray-800 border border-gray-700 rounded-xl hover:border-cyan-500/50 hover:bg-gray-800/80 transition-colors"
            type="button"
          >
            <div
              class="flex items-center gap-1.5 text-cyan-400 mb-1"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V6m0 10v2m9-8a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <span
                class="text-sm font-semibold text-white"
              >
                Stablecoin Peg Break
              </span>
            </div>
            <p
              class="text-xs text-gray-400 mb-1"
            >
              Price drifts more than 1% away from its $1.00 peg in either direction.
            </p>
            <p
              class="text-[11px] text-gray-500 italic"
            >
              Get an early warning if a stablecoin you hold or rely on is losing its peg.
            </p>
          </button>
        </div>
        <button
          class="text-xs text-cyan-400 hover:text-cyan-300 transition-colors"
          type="button"
        >
          + Save current settings as a preset
        </button>
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-gray-400 mb-1.5"
          for="alert-asset-pair"
        >
          Asset Pair
        </label>
        <input
          class="w-full bg-gray-800 border border-gray-700 rounded-xl px-4 py-2.5 text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-cyan-500/50 focus:border-cyan-500 disabled:opacity-50 disabled:cursor-not-allowed"
          id="alert-asset-pair"
          placeholder="e.g. BTC/USD"
          type="text"
          value=""
        />
      </div>
      <div
        class="mb-5"
      >
        <span
          class="block text-sm font-medium text-gray-400 mb-2"
        >
          Alert Mode
        </span>
        <div
          class="flex gap-2"
        >
          <button
            class="flex-1 py-2 text-sm font-medium rounded-xl border transition-colors bg-cyan-600 border-cyan-500 text-white"
            type="button"
          >
            Absolute Price
          </button>
          <button
            class="flex-1 py-2 text-sm font-medium rounded-xl border transition-colors bg-gray-800 border-gray-700 text-gray-400 hover:bg-gray-700"
            type="button"
          >
            Price Movement %
          </button>
        </div>
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-gray-400 mb-1.5"
          for="alert-upper"
        >
          Upper Threshold
        </label>
        <div
          class="flex gap-2"
        >
          <input
            class="flex-1 bg-gray-800 border border-gray-700 rounded-xl px-4 py-2.5 text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-cyan-500/50 focus:border-cyan-500 [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
            id="alert-upper"
            min="0"
            placeholder="Max price"
            step="any"
            type="number"
            value=""
          />
          <div
            class="flex gap-1 shrink-0"
          >
            <button
              class="px-2 py-1 text-xs font-medium text-cyan-400 bg-cyan-400/10 border border-cyan-400/20 rounded-lg hover:bg-cyan-400/20 transition-colors"
              type="button"
            >
              +5%
            </button>
            <button
              class="px-2 py-1 text-xs font-medium text-cyan-400 bg-cyan-400/10 border border-cyan-400/20 rounded-lg hover:bg-cyan-400/20 transition-colors"
              type="button"
            >
              +10%
            </button>
          </div>
        </div>
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-gray-400 mb-1.5"
          for="alert-lower"
        >
          Lower Threshold
        </label>
        <div
          class="flex gap-2"
        >
          <input
            class="flex-1 bg-gray-800 border border-gray-700 rounded-xl px-4 py-2.5 text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-cyan-500/50 focus:border-cyan-500 [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
            id="alert-lower"
            min="0"
            placeholder="Min price"
            step="any"
            type="number"
            value=""
          />
          <div
            class="flex gap-1 shrink-0"
          >
            <button
              class="px-2 py-1 text-xs font-medium text-cyan-400 bg-cyan-400/10 border border-cyan-400/20 rounded-lg hover:bg-cyan-400/20 transition-colors"
              type="button"
            >
              -5%
            </button>
            <button
              class="px-2 py-1 text-xs font-medium text-cyan-400 bg-cyan-400/10 border border-cyan-400/20 rounded-lg hover:bg-cyan-400/20 transition-colors"
              type="button"
            >
              -10%
            </button>
          </div>
        </div>
      </div>
      <div
        class="mb-5 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="text-sm font-medium text-gray-300"
          >
            Additional Conditions
          </span>
          <button
            class="text-xs px-2.5 py-1 rounded-lg border border-cyan-500/30 text-cyan-400 bg-cyan-500/10 hover:bg-cyan-500/20 transition-colors"
            type="button"
          >
            + Add condition
          </button>
        </div>
        <p
          class="text-xs text-gray-500 mb-3"
        >
          Layer extra conditions on top of the field above, combined with AND/OR.
        </p>
      </div>
      <div
        class="mb-6 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <span
          class="block text-sm font-medium text-gray-300 mb-2"
        >
          Alert Type
        </span>
        <div
          class="flex gap-2 mb-2"
        >
          <button
            class="flex-1 py-2 text-sm rounded-xl border transition-colors bg-gray-800 border-gray-700 text-gray-400 hover:bg-gray-700"
            type="button"
          >
            One-Time
          </button>
          <button
            class="flex-1 py-2 text-sm rounded-xl border transition-colors bg-cyan-600 border-cyan-500 text-white"
            type="button"
          >
            Persistent
          </button>
        </div>
        <p
          class="text-xs text-gray-500"
        >
          Fires every time the condition is met. Tracks fire count.
        </p>
        <div
          class="mt-3 pt-3 border-t border-gray-700"
        >
          <label
            class="block text-xs font-medium text-gray-400 mb-1.5"
            for="alert-cooldown"
          >
            Cooldown between alerts
          </label>
          <select
            class="w-full bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white focus:outline-none focus:ring-2 focus:ring-cyan-500/50 focus:border-cyan-500"
            id="alert-cooldown"
          >
            <option
              value="0"
            >
              Off (fire immediately)
            </option>
            <option
              value="1"
            >
              1 minute
            </option>
            <option
              value="5"
            >
              5 minutes
            </option>
            <option
              value="15"
            >
              15 minutes
            </option>
            <option
              value="60"
            >
              1 hour
            </option>
          </select>
          <p
            class="mt-1 text-xs text-gray-500"
          >
            Minimum time between re-fires, to avoid notification spam when the price oscillates around your threshold.
          </p>
        </div>
      </div>
      <div
        class="mb-5 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <label
          class="flex items-center gap-2 cursor-pointer mb-1"
        >
          <input
            class="w-4 h-4 rounded border-gray-600 bg-gray-800 text-cyan-500"
            type="checkbox"
          />
          <span
            class="text-sm font-medium text-gray-300"
          >
            Enable escalation policy
          </span>
        </label>
        <p
          class="text-xs text-gray-500 mb-3"
        >
          Notify additional channels at increasing delays while the breach stays active.
        </p>
      </div>
      <div
        class="mb-6 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <label
          class="flex items-center gap-2 cursor-pointer"
        >
          <input
            class="w-4 h-4 rounded border-gray-600 bg-gray-800 text-cyan-500 focus:ring-cyan-500/50"
            type="checkbox"
          />
          <span
            class="text-sm font-medium text-gray-300"
          >
            Notify on retest
          </span>
        </label>
        <p
          class="text-xs text-gray-500 mt-1.5"
        >
          Also fire if the price re-enters this breached level after it exits.
        </p>
      </div>
      <div
        class="mb-6 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="block text-sm font-medium text-gray-300"
          >
            Notify via
          </span>
          <button
            class="text-xs text-gray-500 hover:text-gray-300 transition-colors"
            type="button"
          >
            Use global defaults
          </button>
        </div>
        <p
          class="text-xs text-gray-500 mb-3"
        >
          Choose where this alert is delivered. Leave empty to use the channels configured in your notification settings.
        </p>
        <p
          class="text-xs text-amber-400/80"
        >
          No channels configured — set up channels in Notification Settings first.
        </p>
      </div>
      <div
        class="mb-6 p-3 bg-gray-800/50 border border-gray-700 rounded-xl"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="block text-sm font-medium text-gray-300"
          >
            Test alert
          </span>
          <button
            class="text-xs px-3 py-1.5 rounded-lg bg-blue-600 text-white hover:bg-blue-500 transition-colors disabled:opacity-40 disabled:cursor-not-allowed"
            disabled=""
            type="button"
          >
            Run simulation
          </button>
        </div>
        <p
          class="text-xs text-gray-500 mb-2"
        >
          Replays a synthetic price series through the same evaluation logic used live, marking exactly where this alert would fire.
        </p>
        <p
          class="text-xs text-gray-500 italic"
        >
          Run a simulation to see how this alert behaves without touching your live configuration.
        </p>
      </div>
      <div
        class="flex gap-3"
      >
        <div
          class="flex-1 flex gap-3 justify-end"
        >
          <button
            class="px-4 py-2.5 text-sm font-medium text-gray-400 bg-gray-800 border border-gray-700 rounded-xl hover:bg-gray-700 transition-colors"
            type="button"
          >
            Cancel
          </button>
          <button
            class="px-4 py-2.5 text-sm font-medium text-white bg-cyan-600 rounded-xl hover:bg-cyan-500 transition-colors focus:outline-none focus:ring-2 focus:ring-cyan-500/50 disabled:opacity-50 disabled:cursor-not-allowed"
            type="submit"
          >
            Create Alert
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
